...
    <string name="Settings_contentDescription">Location</string>
    <string name="Settings_contentDescriptionBell">Bell</string>
    <string name="Settings_captureInterval">Capture Interval(s)</string>
    <string name="Settings_notifDistance">Notification Distance(m)</string>

    <!-- SINGLETRAIL -->
    <string name="Single_Trail_Stop">Stop</string>
    <string name="Single_Trail_Thumbnail">Thumbnail</string>
    <string name="Single_Trail_Name">Trail Name</string>
    <string name="Single_Trail_Duration">Duration (min)</string>
    <string name="Single_Trail_Description">Description</string>
    <string name="Single_Trail_Itinerary">Itinerary</string>
    <string name="Single_Trail_ContentDescriptionStar">Star Icon</string>
    <string name="Single_Trail_Difficulty">Difficulty</string>
    <string name="Single_Trail_Start">Start</string>
    <string name="Single_Trail_Total_Dist">Total distance (m) : %s</string>
    <string name="Single_Trail_Total_Seconds">Total time (s) : %s </string>
    <string name="Single_Trail_dialog_title_stopped">Trail Stopped</string>
    <string name="Single_Trail_dialog_title_concluded">Trail Completed!</string>
    <string name="Single_Trail_dialog_Places_Visited">Places visited/to visit: %d/%d</string>
    <string name="Single_Trail_dialog_ok">Okay</string>
...
    <string name="pinTrailCard_Description">The Sé of Braga, also known as the Braga Cathedral, is a magnificent example of Baroque architecture located in the historic city of Braga, Portugal. This grand cathedral was built in the 11th century, and has undergone numerous renovations and additions ....</string>
    <string name="PinTrailCard_ImageDesc">Pin Trail Card Image</string>

    <!-- NAV BAR -->
    <string name="NavBar_Emergency">Emergency</string>
    <string name="NavBar_Profile">Profile</string>
    <string name="NavBar_Itineraries">Trails</string>
    <string name="NavBar_Home">Home</string>

    <!-- URL's -->
    <string name="urlLogin">https://c5a2-193-137-92-29.eu.ngrok.io/login</string>
    <string name="urlTrails">https://c5a2-193-137-92-29.eu.ngrok.io/trails</string>
    <string name="urlApp">https://c5a2-193-137-92-29.eu.ngrok.io/app</string>
...
