<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:id="@+id/trailActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SingleTrailActivity">


        <TextView
            android:id="@+id/difficultyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/dificultyTitle"
            app:layout_constraintStart_toStartOf="@+id/dificultyTitle"
            app:layout_constraintTop_toBottomOf="@+id/dificultyTitle" />

        <TextView
            android:id="@+id/dificultyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/Single_Trail_Difficulty"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintStart_toEndOf="@+id/durationTitle"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFree" />

        <Button
            android:id="@+id/StartBtn"
            android:layout_width="136dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:text="@string/Single_Trail_Start"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/StopBtn"
            android:layout_width="136dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:text="@string/Single_Trail_Stop"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.678"
            app:layout_constraintStart_toEndOf="@+id/StartBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewFree"
            android:layout_width="403dp"
            android:layout_height="255dp"
            android:layout_marginTop="92dp"
            android:contentDescription="@string/Single_Trail_Thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/braga_thumbnail" />

        <TextView
            android:id="@+id/itineraryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Single_Trail_Name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFree" />

        <TextView
            android:id="@+id/durationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/Single_Trail_Duration"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFree" />

        <TextView
            android:id="@+id/durationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/durationTitle"
            app:layout_constraintStart_toStartOf="@+id/durationTitle"
            app:layout_constraintTop_toBottomOf="@+id/durationTitle" />

        <TextView
            android:id="@+id/descriptionTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Single_Trail_Description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/durationValue" />

        <TextView
            android:id="@+id/descriptionValue"
            android:layout_width="365dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTag" />

        <TextView
            android:id="@+id/ItineraryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Single_Trail_Itinerary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionValue" />


        <com.example.fase1.CustomMapView
            android:id="@+id/mapView"
            android:layout_width="wrap_content"
            android:layout_height="502dp"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ItineraryTitle"
             />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ListPoints"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <ImageView
            android:id="@+id/starIcon"
            android:layout_width="36dp"
            android:layout_height="42dp"
            android:layout_marginTop="11dp"
            android:onClick="changeStar"
            android:contentDescription="@string/Single_Trail_ContentDescriptionStar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toEndOf="@+id/itineraryName"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFree"
            app:srcCompat="@drawable/star_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
